--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-dash==2.18.2
-dash-bootstrap-components==1.7.1
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-gunicorn==23.0.0
-pandas==2.1.1
-plotly==6.0.0
+dash==2.9.3
+dash-bootstrap-components==1.4.1
+pandas==1.5.3
+plotly==5.14.1
+numpy==1.24.3
+gunicorn==21.2.0
