Add .gitignore to exclude historical files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 google-chrome-stable_current_amd64.deb
+data/loi_df_20250305_172807.csv
+data/loi_df_20250305_170943.csv
+data/loi_df_20250305_143809.csv
